<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talkerlistener</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dasiths@hotmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
